--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^12.0.1",
     "@popperjs/core": "^2.10.2",
+    "@types/gsap": "^3.0.0",
     "bootstrap": "^5.1.3",
     "gsap": "^3.10.3",
     "rxjs": "~7.5.0",
