--- a/firebase.json
+++ b/firebase.json
@@ -23,7 +23,7 @@
         ]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|webp|eot|otf|ttf|ttc|woff|font.css)",
+        "source": "**/*.@(jpg|jpeg|gif|png|webp|eot|otf|ttf|ttc|woff|font.css|js|css)",
         "headers": [
           {
             "key": "Cache-Control",
